--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -20,24 +20,29 @@
 .about_rwd_title{
     display: none;
 }
-// .about_slogan{
-//     position: absolute;
-//     right: 10vw;
-//     bottom: 100px;
-//     color: white;
-// }
+.about_new{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.about_sloganFirst{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 @media (min-width: 902px) and (max-width: 1200px) {
     .about_slogan {
         right: 15px;
         bottom: 0;
     }
+ 
 }
 
 @media (min-width: 576px) and (max-width: 902px) {
     // 有關banner slogan 字大小變動
     .about_slogan {
-        right: 0;
+        right: 20px;
         bottom: 0;
     }
     .about_slogan h1 {
@@ -61,10 +66,12 @@
         font-size: 14px;
     }
     .about_rwd_title{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         font-size: 24px;
     }
-    .about_slogan h1{
+    .about_new{
         display: none;
     }
 }
@@ -81,13 +88,16 @@
         font-size: 14px;
     }
     .about_rwd_title{
-        display: block;
-        font-size: 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 20px;
     }
-    .about_slogan h1{
+    .about_new{
         display: none;
     }
     
+ 
 }
 
 @media screen and (max-width:768px) {
