--- a/src/sass/page/_c_back.scss
+++ b/src/sass/page/_c_back.scss
@@ -912,22 +912,35 @@ li.variouscompany {
 
     //以下兩個li
     ul.companyback_main_chatbox {
+        @include relative();
         .one {
             width: 80%;
             margin: 0 auto;
             min-width: 300px;
-            display: none;
+            cursor: pointer;
         }
-
+        
         .two {
-            display: inline-block;
-            width: 80%;
+            width: 100%;
             min-width: 300px;
             margin: 0 auto;
+
+            display: none;
+            @include absolute(0, 0, auto, auto, 10);
         }
+        
     }
 
-
+    .mask{
+        // position: fixed;
+        // top: 0;
+        // z-index: 10000000;
+        // display: none;
+        // background-color: rgba(0, 0, 0, .7);
+        // width: 100%;
+        // height: 100%;
+        
+    }
 
     .companyback_search {
         .companyback_searchinput {
@@ -974,6 +987,20 @@ li.variouscompany {
 
 
     // 第二個聊天室
+    li.two {
+        article.companyback_back_chatbox {
+            div.chat_title {
+                i.fa-xmark {
+                    margin-left: auto;
+                    font-size: 8vw;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+
+
+
 
 
 
