--- a/src/layout/login.html
+++ b/src/layout/login.html
@@ -13,7 +13,8 @@
                 <label for="email_1" title="電子郵件" data-title="email"></label>
             </div>
             <div class="field">
-                <input type="password" id="password_1" required autocomplete="off" placeholder="" class="login_signup" />
+                <input type="password" id="password_1" required autocomplete="off" placeholder=""
+                    class="login_signup" />
                 <label for="password_1" title="密碼" data-title="password"></label>
             </div>
             <div class="login-group">
@@ -52,7 +53,8 @@
                 <label for="email_3" title="電子郵件" data-title="email"></label>
             </div>
             <div class="field">
-                <input type="password" id="password_2" required autocomplete="off" class="login_signup" placeholder="" />
+                <input type="password" id="password_2" required autocomplete="off" class="login_signup"
+                    placeholder="" />
                 <label for="password_2" title="密碼" data-title="password"></label>
             </div>
             <div class="field">
@@ -60,7 +62,7 @@
                 <label for="company_2" title="貴公司單位" data-title="company"></label>
             </div>
 
-            <select name="" id="exb_dropdown" >
+            <select name="" id="exb_dropdown">
                 <option value="0" disabled>展覽類型</option>
                 <option value="1">Tián lám 2022智慧全球科技聚策展</option>
             </select>
